--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ object-fit: cover;
 .navbar .navbar-nav .nav-link {
     margin-right: 35px;
     padding: 25px 0;
-    color: var(--dark);
+    color:#FFFFFF;
     font-weight: 600;
     text-transform: uppercase;
     outline: none;
@@ -180,7 +180,8 @@ object-fit: cover;
     bottom: 0;
     display: flex;
     align-items: center;
-    background: rgba(136, 180, 78, .7);
+    /* background: rgba(136, 180, 78, .7); */
+    background: rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
 
@@ -211,9 +212,8 @@ object-fit: cover;
         object-fit: cover;
     }
 }
-
 .page-header {
-    background: linear-gradient(rgba(136, 180, 78, .7), rgba(136, 180, 78, .7)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/teacup/banner1.jpeg) center center no-repeat;
     background-size: cover;
 }
 
