--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,7 @@ object-fit: cover;
     }
 }
 .page-header {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/teacup/banner1.jpeg) center center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/teacup/banner2.webp) center center no-repeat;
     background-size: cover;
 }
 
